--- a/AggieTicketbox/app/src/main/res/layout/activity_date_pick.xml
+++ b/AggieTicketbox/app/src/main/res/layout/activity_date_pick.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.pgran.aggieticketbox.DatePickActivity">
 
-    <CalendarView
-        android:id="@+id/calendarView"
+    <DatePicker
+        android:id="@+id/datePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </CalendarView>
+    </DatePicker>
 
 </LinearLayout>
