added Login and Firebase

--- a/AggieTicketbox/app/src/main/res/layout/activity_main.xml
+++ b/AggieTicketbox/app/src/main/res/layout/activity_main.xml
@@ -38,5 +38,19 @@
         android:text="Type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/adminButton"
+            android:text="Admin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
 </LinearLayout>
+
+
